--- a/README.ipynb
+++ b/README.ipynb
@@ -27,7 +27,7 @@
     "Para poder hallar la distribución se utiliza la siguiente distribución con tablas, donde: \n",
     "\n",
     "\n",
-    "<div align=\"center\"><img style=\"background: white;\" src=\"..\\eq\\Screenshot_1.png\"></div>\n",
+    "<div align=\"center\"><img style=\"background: white;\" src=\"eq\\Screenshot_1.png\"></div>\n",
     "\n",
     "Se puede ver en la tabla que se supone un valor de $S_o$ (naranja) y se modifica hasta que el valor en $S|_{r=R}$ sea igual a 1.\n",
     "\n",
